# portuguese_french_vocabulary_scraper

./: README.md  pyproject.toml  scraper.py
